@@ -2,6 +2,7 @@
 	* adding decoder for UTF8 and INT32 ecoded data
 	* fixing storing attributes in FieldArrays
 	* fixing shape finding and FetchNameHandler conditions 
+	* fixing shape order in Tango DataSource
 	* tagged as 1.0.X
 
 
